--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@ html, body {
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
-  background-size: cover;
+  background: url(../images/backgrounds/architecture.jpg) center;
+  background-repeat: repeat-y;
+  background-size:80%;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
@@ -62,6 +63,8 @@ a {
 
 a:hover {
   text-decoration: underline;
+  color: red;
+  font-size: larger;
 }
 
 @media only screen and (max-width: 1042px) {
